# hackathon

./: .env.local  .gitignore  BACKEND_INTEGRATION_GUIDE.md  package-lock.json  package.json  server.js
UottawaHack/: INTEGRATION_GUIDE.md  README.md  SETUP_GUIDE.md  fix_gemini.sh  main.py  quickstart.sh  requirements.txt  test_setup.py
UottawaHack/pharmatrace-env/: pyvenv.cfg
UottawaHack/tests/: test_extraction.py  test_sample_generator.py
UottawaHack/utils/:  test_candidate_ranker.py  __init__.py  candidate_ranker.py  medical_extractor.py  sample_generator.py  trial_matcher.py
anchor/backend/: .gitignore  app.py  nlp_engine.py  requirements.txt
anchor/frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  vite.config.ts
anchor/frontend/public/: upload-record.css  upload-record.html  upload-record.js
anchor/frontend/src/: app.tsx  index.css  main.tsx
anchor/frontend/src/components/: CustomCursor.tsx  Navbar.tsx  VisualThreeD.tsx  WalletContextProvider.tsx  patientDash.tsx  researcherAuth.tsx  researcherDash.tsx  utils.ts
anchor/frontend/src/hooks/: useSolanaProgram.ts
anchor/frontend/src/utils/: constants.ts  program.ts
anchor/programs/: Anchor.toml  Cargo.toml
anchor/programs/pharma_trace/: Cargo.toml
anchor/programs/pharma_trace/src/: lib.rs
anchor/programs/tests/: pharma_trace.ts
src/: patientDash.tsx  pdfAnalysis.tsx  utils.ts
